# wifi-security-lab

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.downgrade.yml  docker-compose.yml  pyproject.toml
attacks/common/: base_attack.py  cli.py  config.py  logging_setup.py  models.py  privileges.py
attacks/common/analysis/: calibration.py  plotting.py  stats.py
attacks/common/io/: reporting.py
attacks/common/wireless/: discovery.py  rsn.py  sae.py  sae_crypto.py
attacks/dragonblood/: downgrade.py  live_recovery.py  password_recovery.py  rockyou_100k.txt  timing_sidechannel.py
config/hostapd/: hostapd_sae.conf  hostapd_sae_transition.conf
config/scenarios/: dragonblood_downgrade.env  dragonblood_recovery.env  dragonblood_timing.env
config/wpa_supplicant/: wpa_supplicant_sae.conf
docs/paper/: build.sh  generate_figures.py  paper.tex  references.bib
host/: assign-phys.sh  netem.sh  setup.sh  teardown.sh  vm-exec.sh  vm-setup.sh  vm-teardown.sh  vm-venv.sh
images/ap/: Dockerfile  entrypoint.sh
images/attacker/: Dockerfile  entrypoint.sh
images/base/: Dockerfile  lib.sh
images/client/: Dockerfile  entrypoint.sh
images/hostap-builder/: Dockerfile
images/hostap-builder/patches/: timing_delay.patch
lima/: wifi-lab.yaml
tests/: conftest.py
tests/e2e/: conftest.py  test_connectivity_e2e.py  test_downgrade_e2e.py  test_recovery_e2e.py  test_timing_e2e.py
tests/integration/: test_downgrade_attack.py  test_live_recovery.py  test_password_recovery.py  test_timing_attack.py
tests/unit/common/: test_base_attack.py  test_recon.py  (+2 more)
(+11 files in other folders)
